# yet-another-project-I-ll-probably-forget-about

./: .gitignore  CMakeLists.txt  README.md  grub.cfg
docs/known-bugs/0/: FAILURE_MODE  FAILURE_MODE_OUTPUT
kernel/: CMakeLists.txt  boot.S  channel.cpp  exceptions.cpp  gdt.S  gdt.cpp  idt.cpp  irq.cpp  isr.S  isr.cpp  kmalloc.cpp  link.ld  main.cpp  multiboot.cpp  paging.cpp  panic.cpp  pmm.cpp  scheduler.cpp  serial.cpp  stacktrace.cpp  switchtask.S  syscalls.cpp  tests.cpp  timer.cpp
kernel/include/kernel/: channel.h  exceptions.h  gdt.h  idt.h  io.h  irq.h  isr.h  kernel.h  kmalloc.h  linkedlist.h  multiboot.h  multiboot2.h  paging.h  panic.h  pmm.h  scheduler.h  serial.h  stacktrace.h  status.h  syscalls.h  tests.h  timer.h
libc/: CMakeLists.txt  __libc_start_main.cpp  assert.cpp  chdir.cpp  ctype.cpp  elf.cpp  errno.cpp  exec.cpp  getcwd.cpp  getenv.cpp  globalstate.cpp  malloc.cpp  opendir.cpp  printf.cpp  start.S  startparams.cpp  stdio.cpp  stdlib.cpp  string.cpp  ustar.cpp  vfs.cpp  wait.cpp
libc/include/: _internals.h  assert.h  ctype.h  dirent.h  errno.h  limits.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
libc/include/bits/: alltypes.h  errno.h
libc/include/libc/: malloc.h  resizable_buffer.h  ustar.h
libc/include/libc/elf/: elf.h
libc/include/libc/startup/: globalstate.h  startparams.h  vfs.h
libc/include/libc/tests/: malloc.h  test.h
libc/include/sys/: types.h  wait.h
libc/tests/: malloc.cpp  tests.cpp
libcxx/: CMakeLists.txt  cxa_pure_virtual.cpp  new.cpp
libcxx/include/: __out_of_range.h  algorithm  functional  iterator  memory  string  test_macros.h  type_traits  utility  vector
userboot/: CMakeLists.txt  hello.cpp  link.ld  ls.cpp  page_fault.cpp  printenv.cpp  shell.cpp  syscalls.cpp  userboot.cpp  userstart.S
userboot/include/: status.h  syscalls.h
userboot/tests/: CMakeLists.txt  malloc.cpp
